--- a/requirements_new.txt
+++ b/requirements_new.txt
@@ -1,36 +1,36 @@
 --extra-index-url https://download.pytorch.org/whl/cu124
-conformer
-deepspeed
-diffusers
-gdown
-gradio
-grpcio
-grpcio-tools
-hydra-core
-HyperPyYAML
-inflect
-librosa
-lightning
-matplotlib
-networkx
-omegaconf
-onnxruntime-gpu
-openai-whisper
-protobuf
-pydantic
-rich
-soundfile
-tensorboard
-torch
-torchaudio
-wget
-fastapi
-fastapi-cli
-WeTextProcessing
-opencc-python-reimplemented
-g2pw
-pyarrow
-datasets
+conformer==0.3.2
+deepspeed==0.16.4
+diffusers==0.32.2
+gdown==5.2.0
+gradio==5.20.1
+grpcio==1.71.0
+grpcio-tools==1.71.0
+hydra-core==1.3.2
+HyperPyYAML==1.2.2
+inflect==7.5.0
+librosa==0.10.2.post1
+lightning==2.5.0.post0
+matplotlib==3.10.0
+networkx==3.4.2
+omegaconf==2.3.0
+onnxruntime-gpu==1.21.0
+openai-whisper==20240930
+protobuf==5.29.3
+pydantic==2.10.6
+rich==13.9.4
+soundfile==0.13.1
+tensorboard==2.19.0
+torch==2.6.0+cu124
+torchaudio==2.6.0+cu124
+wget==3.2
+fastapi==0.115.8
+fastapi-cli==0.0.7
+WeTextProcessing==1.0.4.1
+opencc-python-reimplemented==0.1.7
+g2pw==0.1.1
+pyarrow==19.0.1
+datasets==3.3.2
 
 https://www.modelscope.cn/models/speech_tts/speech_kantts_ttsfrd/resolve/master/ttsfrd_dependency-0.1-py3-none-any.whl
 https://www.modelscope.cn/models/speech_tts/speech_kantts_ttsfrd/resolve/master/ttsfrd-0.3.9-cp310-cp310-linux_x86_64.whl
