--- a/requirements_new.txt
+++ b/requirements_new.txt
@@ -1,4 +1,6 @@
 --extra-index-url https://download.pytorch.org/whl/cu124
+--extra-index-url https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/
+
 conformer==0.3.2
 deepspeed==0.16.4
 diffusers==0.32.2
@@ -14,7 +16,7 @@ lightning==2.5.0.post0
 matplotlib==3.10.0
 networkx==3.4.2
 omegaconf==2.3.0
-onnxruntime-gpu==1.21.0
+onnxruntime-gpu==1.20.1
 openai-whisper==20240930
 protobuf==5.29.3
 pydantic==2.10.6
@@ -28,9 +30,10 @@ fastapi==0.115.8
 fastapi-cli==0.0.7
 WeTextProcessing==1.0.4.1
 opencc-python-reimplemented==0.1.7
-g2pw==0.1.1
 pyarrow==19.0.1
 datasets==3.3.2
+
+git+https://github.com/chenjoachim/g2pW.git
 
 https://www.modelscope.cn/models/speech_tts/speech_kantts_ttsfrd/resolve/master/ttsfrd_dependency-0.1-py3-none-any.whl
 https://www.modelscope.cn/models/speech_tts/speech_kantts_ttsfrd/resolve/master/ttsfrd-0.3.9-cp310-cp310-linux_x86_64.whl
